[Offline Page] Fix test failure on svelte devices.

The failure was because we weren't trying to run tests on low-end devices
and we weren't trying to do immediate scheduling on svelte devices. Adding
a call to the callback resolved the issue.

BUG=657775

Review-Url: https://chromiumcodereview.appspot.com/2433283003
Cr-Commit-Position: refs/heads/master@{#426676}

Former-commit-id: 875cef2100560bcb9308e72742f7b5a00c2c66ab